work to update to latest xorcery.